--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5"
+    "nativewind": "^2.0.11",
+    "react": "^18.2.0",
+    "react-native": "^0.74.5",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-reanimated": "^3.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
