--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    // "strict": true,
+    "jsx": "react",
+    "moduleResolution": "node",
+    "types": ["react", "react-native"]
   }
 }
