--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "lucide-react-native": "^0.453.0",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-native": "^0.74.5",
